--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
     <div id="collapseOne" class="panel-collapse collapse in">
         <div class="panel-body">
             <div class="form-group">
+                <label for="username" class="col-sm-2 control-label">Jouw gebruikersnaam</label>
+
+                <div class="col-sm-10">
+                    <input type="text" class="form-control customizable" id="username"
+                           data-variable="@username">
+                </div>
+            </div>
+            <div class="form-group">
                 <label for="top" class="col-sm-2 control-label">Header kleur</label>
 
                 <div class="col-sm-10">
@@ -232,6 +240,18 @@
                             <input type="checkbox" name="lessSpaceBetweenTopicTitles" class="customizable"
                                    id="lessSpaceBetweenTopicTitles"
                                    data-variable="@lessSpaceBetweenTopicTitles"> Minder ruimte tussen topictitels
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="hideLastReply" class="customizable"
+                                   id="hideLastReply"
+                                   data-variable="@hideLastReply"> Als je als laatste hebt gereageerd hebt in een topic,
+                            het topic 'verbergen'
                         </label>
                     </div>
                 </div>
